--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "formik": "^2.2.9",
+    "html2canvas": "^1.4.1",
+    "immer": "^9.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
