--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "immer": "^9.0.21",
     "material-ui-popup-state": "^5.0.8",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^8.0.5",
