--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffer": "^6.0.3",
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "immer": "^9.0.21",
     "material-ui-popup-state": "^5.0.8",
     "react": "^18.2.0",
