--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "immer": "^9.0.21",
     "material-ui-popup-state": "^5.0.8",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
