--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "immer": "^9.0.21",
+    "jspdf": "^2.5.1",
     "material-ui-popup-state": "^5.0.8",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
