--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-proxy-middleware": "^2.0.6",
     "immer": "^9.0.21",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.8",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
